# ExternalScanControl

./: CMakeLists.txt  ExternalScan.h  README  ScanControl.h  align.cpp  gui.cpp  main.cpp  scan.cpp  tif.hpp  xcorr.hpp
64/: NIDAQmx.lib
example_data/: plot_shifts.py  raster.tif  snake.tif
example_data/corrected/: raster.tif  raster_8bit.tif  raster_cor.tif  shifts.txt  snake.tif  snake_8bit.tif  snake_cor.tif
